--- a/src/app/components/public-document-mobile-fixed-tools/public-document-mobile-fixed-tools.component.html
+++ b/src/app/components/public-document-mobile-fixed-tools/public-document-mobile-fixed-tools.component.html
@@ -9,6 +9,6 @@
 </div>
 
 <button type="button" class="opener" (click)="displayMenu()">
-  <mat-icon *ngIf="!open">menu_open</mat-icon>
+  <mat-icon *ngIf="!open">add_circle</mat-icon>
   <mat-icon *ngIf="open">cancel</mat-icon>
 </button>
