--- a/src/app/components/public-document-mobile-subcategory-bars/public-document-mobile-subcategory-bars.component.html
+++ b/src/app/components/public-document-mobile-subcategory-bars/public-document-mobile-subcategory-bars.component.html
@@ -1,10 +1,10 @@
-<button type="button" class="placebtn" *ngIf="document.coverage.length > 1" (click)="displayCoverageMenu()">
+<!-- <button type="button" class="placebtn" *ngIf="document.coverage.length > 1" (click)="displayCoverageMenu()">
   <img src="../../../assets/images/mapa-mex.png" [alt]="document.title">
-</button>
+</button> -->
 
-<div class="set-12 featured-users">
+<!-- <div class="set-12 featured-users">
   <div class="featured-users-circles"></div>
-</div>
+</div> -->
 
 <div class="set-12 bars">
   <div class="set-12 inner-bar" *ngFor="let layout of layouts">
