--- a/src/app/components/public-document-mobile-topic-view/public-document-mobile-topic-view.component.html
+++ b/src/app/components/public-document-mobile-topic-view/public-document-mobile-topic-view.component.html
@@ -1,7 +1,34 @@
 <div class="set-12 cards">
   <mat-card class="set-12">
-    <div class="set-12 row">
-      <strong>{{topic?.title}}</strong>
+    <div class="set-12 row rowflex">
+      <div class="set-10">
+        <strong>{{topic?.title}}</strong>
+      </div>
+
+      <div class="set-2 txt-right">
+        <button type="button" class="crumbs-menu" mat-icon-button color="primary" [matMenuTriggerFor]="crumbsMenu">
+          <mat-icon>more_vert</mat-icon>
+        </button>
+        <mat-menu #crumbsMenu="matMenu">
+          <button mat-menu-item (click)="linkMe('/documentos-publicos/' + documentID)">
+            <mat-icon>arrow_left</mat-icon>
+            <span>Mexicolectivo</span>
+          </button>
+          <button mat-menu-item (click)="linkMe('/documentos-publicos/' + documentID + '/categoria/' + categoryID)">
+            <mat-icon>arrow_left</mat-icon>
+            <span>{{category.category.name}}</span>
+          </button>
+          <button mat-menu-item
+            (click)="linkMe('/documentos-publicos/' + documentID + '/categoria/' + categoryID + '/subcategoria/' + subcategoryID)">
+            <mat-icon>arrow_left</mat-icon>
+            <span>{{subcategory.category.name}}</span>
+          </button>
+          <button mat-menu-item>
+            <mat-icon>location_on</mat-icon>
+            <span>{{topic.title}}</span>
+          </button>
+        </mat-menu>
+      </div>
     </div>
 
     <div class="set-12 row" [innerHTML]="topic?.description"></div>
@@ -13,13 +40,13 @@
         <small>Vota</small>
       </button>
       <div class="set-12 ctrls">
-        <button type="button">
+        <button type="button" disabled>
           <mat-icon>favorite</mat-icon>
         </button>
-        <button type="button">
+        <button type="button" disabled>
           <mat-icon>share</mat-icon>
         </button>
-        <button type="button">
+        <button type="button" disabled>
           <mat-icon>forum</mat-icon>
         </button>
         <button type="button" (click)="openTestimoniesDialog()">
@@ -44,7 +71,11 @@
         <mat-icon>insights</mat-icon>
       </p>
       <div class="set-12">
-        <div class="set-12 list-item" *ngFor="let solution of solutions" (click)="linkMe(solution._id)">
+        <div class="set-12 list-item" *ngFor="let solution of solutions" (click)="linkMe('/documentos-publicos/' + this.documentID + 
+          '/categoria/' + this.categoryID + 
+          '/subcategoria/' + this.subcategoryID + 
+          '/tema/' + this.topicID + 
+          '/solucion/' + solution._id)">
           <div class="set-10">
             <small>{{solution?.title}}</small>
           </div>
