--- a/src/app/components/public-document-mobile-topic-view/public-document-mobile-topic-view.component.scss
+++ b/src/app/components/public-document-mobile-topic-view/public-document-mobile-topic-view.component.scss
@@ -19,6 +19,11 @@
     border-radius: 0 !important;
   }
 
+  .rowflex {
+    display: flex;
+    align-items: center;
+  }
+
   .row:not(:first-child) {
     margin-top: 20px;
   }
