--- a/src/app/components/public-document-mobile-category-bars/public-document-mobile-category-bars.component.html
+++ b/src/app/components/public-document-mobile-category-bars/public-document-mobile-category-bars.component.html
@@ -1,6 +1,6 @@
-<button type="button" class="placebtn" *ngIf="document.coverage.length > 1" (click)="displayCoverageMenu()">
+<!-- <button type="button" class="placebtn" *ngIf="document.coverage.length > 1" (click)="displayCoverageMenu()">
   <img src="../../../assets/images/mapa-mex.png" [alt]="document.title">
-</button>
+</button> -->
 
 <div class="set-12 featured-users">
   <div class="featured-users-circles"></div>
@@ -8,11 +8,6 @@
 
 <div class="set-12 bars">
   <div class="set-12 inner-bar" *ngFor="let layout of layouts">
-    <!-- <div class="grayback" [style.width]="layout.stats.score + '%'">
-      <button type="button" class="fav">
-        <mat-icon>favorite</mat-icon>
-      </button>
-    </div> -->
     <div class="grayback">
       <button type="button" class="fav">
         <mat-icon>favorite</mat-icon>
@@ -21,11 +16,10 @@
 
     <div class="gradbar" [style.min-width.%]="1" [style.max-width]="'calc(100% - 70px)'"
       [style.width.%]="layout.stats.score" [matTooltip]="layout.stats.score + '%'" matTooltipClass="tooltip"
-      matTooltipPosition="right"></div>
+      matTooltipPosition="right" (click)="linkMe(layout._id)"></div>
 
-    <button type="button" class="catname"
-      (click)="linkMe('/documentos-publicos/' + document_id + '/categoria/' + layout._id)">
-      <small>{{ layout.category.name }}</small>
+    <button type="button" class="catname" (click)="linkMe(layout._id)">
+      {{ layout.category.name }}
     </button>
   </div>
 </div>
