--- a/src/app/components/public-document-mobile-category-bars/public-document-mobile-category-bars.component.scss
+++ b/src/app/components/public-document-mobile-category-bars/public-document-mobile-category-bars.component.scss
@@ -5,7 +5,7 @@
   position: relative;
   float: left;
   width: 100%;
-  padding-bottom: 30px;
+  padding-bottom: 20px;
 
   .containercategory {
     margin: 0px 0px 0px 2rem;
@@ -75,12 +75,12 @@
     }
 
     .gradbar {
-      height: 17px;
+      height: 9px;
       max-width: calc(100% - 70px);
       width: calc(43% - 20px);
       background: linear-gradient(180deg, #71F5AD 0%, #0EAA70 100%);
       border-radius: 50px;
-      margin: 13px 0 0 20px;
+      margin: 20px 0 0 20px;
       position: relative;
       z-index: 7;
     }
@@ -88,14 +88,14 @@
     .catname {
       // width: calc(40% - 70px);
       position: absolute;
-      top: 3px;
+      top: 5px;
       left: 0;
       display: flex;
       align-items: center;
       margin-left: 20px;
       z-index: 9;
       font-weight: bold;
-      color: #131313;
+      color: #ffffff;
       transition: all .2s linear;
     }
 
@@ -140,6 +140,10 @@
         color: #ffffff;
       }
     }
+  }
+
+  .inner-bar:last-child {
+    margin-bottom: 0;
   }
 
   .placebtn {
