--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -25,4 +25,12 @@
       margin: 0;
     }
   }
+  .avatar-icon {
+    position: relative;
+    left: 80px;
+  }
+
+  .topnav-profile {
+    color: #54f093;
+  }
 }
