--- a/src/app/components/public-document-mobile-subcategory-bars/public-document-mobile-subcategory-bars.component.scss
+++ b/src/app/components/public-document-mobile-subcategory-bars/public-document-mobile-subcategory-bars.component.scss
@@ -20,7 +20,7 @@
   }
 
   .inner-bar {
-    height: 40px;
+    height: 44px;
     margin-bottom: 5px;
     position: relative;
     display: flex;
@@ -33,9 +33,8 @@
     }
 
     .grayback {
-      height: 40px;
+      height: 44px;
       width: calc(100% - 20px);
-      max-width: calc(100% - 20px);
       background: rgba(255, 255, 255, 0.5);
       position: absolute;
       top: 0;
@@ -50,24 +49,27 @@
     }
 
     .gradbar {
-      height: 24px;
+      height: 9px;
       max-width: calc(100% - 70px);
       width: calc(43% - 20px);
       background: linear-gradient(180deg, #71F5AD 0%, #0EAA70 100%);
       border-radius: 50px;
-      margin: 0 0 0 20px;
+      margin: 20px 0 0 20px;
       position: relative;
       z-index: 7;
     }
 
     .catname {
+      // width: calc(40% - 70px);
       position: absolute;
+      top: 5px;
+      left: 0;
       display: flex;
       align-items: center;
-      margin-left: 35px;
+      margin-left: 20px;
       z-index: 9;
       font-weight: bold;
-      color: #131313;
+      color: #ffffff;
       transition: all .2s linear;
     }
 
