--- a/src/app/components/public-document-mobile-solution-view/public-document-mobile-solution-view.component.html
+++ b/src/app/components/public-document-mobile-solution-view/public-document-mobile-solution-view.component.html
@@ -1,7 +1,39 @@
 <div class="set-12 cards">
   <mat-card class="set-12">
-    <div class="set-12 row">
-      <strong>{{solution?.title}}</strong>
+    <div class="set-12 row rowflex">
+      <div class="set-10">
+        <strong>{{solution?.title}}</strong>
+      </div>
+
+      <div class="set-2 txt-right">
+        <button type="button" class="crumbs-menu" mat-icon-button color="primary" [matMenuTriggerFor]="crumbsMenu">
+          <mat-icon>more_vert</mat-icon>
+        </button>
+        <mat-menu #crumbsMenu="matMenu">
+          <button mat-menu-item (click)="linkMe('/documentos-publicos/' + documentID)">
+            <mat-icon>arrow_left</mat-icon>
+            <span>Mexicolectivo</span>
+          </button>
+          <button mat-menu-item (click)="linkMe('/documentos-publicos/' + documentID + '/categoria/' + categoryID)">
+            <mat-icon>arrow_left</mat-icon>
+            <span>{{category.category.name}}</span>
+          </button>
+          <button mat-menu-item
+            (click)="linkMe('/documentos-publicos/' + documentID + '/categoria/' + categoryID + '/subcategoria/' + subcategoryID)">
+            <mat-icon>arrow_left</mat-icon>
+            <span>{{subcategory.category.name}}</span>
+          </button>
+          <button mat-menu-item
+            (click)="linkMe('/documentos-publicos/' + documentID + '/categoria/' + categoryID + '/subcategoria/' + subcategoryID + '/tema/' + topicID)">
+            <mat-icon>arrow_left</mat-icon>
+            <span>{{topic.title}}</span>
+          </button>
+          <button mat-menu-item>
+            <mat-icon>location_on</mat-icon>
+            <span>{{solution.title}}</span>
+          </button>
+        </mat-menu>
+      </div>
     </div>
 
     <div class="set-12 row" [innerHTML]="solution?.description"></div>
@@ -13,13 +45,13 @@
         <small>Vota</small>
       </button>
       <div class="set-12 ctrls">
-        <button type="button">
+        <button type="button" disabled>
           <mat-icon>favorite</mat-icon>
         </button>
-        <button type="button">
+        <button type="button" disabled>
           <mat-icon>share</mat-icon>
         </button>
-        <button type="button">
+        <button type="button" disabled>
           <mat-icon>forum</mat-icon>
         </button>
         <button type="button" (click)="openTestimoniesDialog()">
