--- a/src/app/components/public-document-mobile-subcategory-view/public-document-mobile-subcategory-view.component.html
+++ b/src/app/components/public-document-mobile-subcategory-view/public-document-mobile-subcategory-view.component.html
@@ -5,7 +5,9 @@
   }">
 
     <div class="set-12 description">
-      <h3 class="txt-center">{{subcategory.title}}</h3>
+      <p class="title">
+        <strong>{{subcategory.category.name}}</strong>
+      </p>
       <div class="set-12 txt" *ngIf="subcategory.description != null" [innerHtml]="(subcategory.description.length > 100) ? (subcategory.description | slice: 0 : 100) + '...' :
     (subcategory.description)"></div>
       <button type="button" (click)="openModalDescription()" *ngIf="subcategory.description != null">Leer más</button>
@@ -70,9 +72,9 @@
     <div class="public-document-mobile-topic-list" [category]="subcategory"></div>
   </div>
 
-  <div class="set-12" *ngIf="topics.length != 0">
+  <!-- <div class="set-12" *ngIf="topics.length != 0">
     <div class="public-document-mobile-radar-chart" [isSubLayout]="true" [topics]="topics"></div>
-  </div>
+  </div> -->
 
   <div class="set-12">
     <div class="app-footer"></div>
