--- a/src/app/public-documents/solution/solution.component.html
+++ b/src/app/public-documents/solution/solution.component.html
@@ -119,5 +119,5 @@
 
 <!-- mobile -->
 <div class="set-12" *ngIf="isDataAvailable && isMobile">
-  <div class="public-document-mobile-solution-view" [solution]="solution" [user]="user"></div>
+  <div class="public-document-mobile-solution-view" [document]="document" [solution]="solution" [user]="user"></div>
 </div>
