add circle progress component

--- a/src/app/hub/components/tabs-mobile/tabs-mobile.component.html
+++ b/src/app/hub/components/tabs-mobile/tabs-mobile.component.html
@@ -7,12 +7,16 @@
     <mat-tab label="Profile">
       <search-input-mobile></search-input-mobile>
       <spider-chart-mobile></spider-chart-mobile>
+      <circle-chart-mobile></circle-chart-mobile>
+      <line-chart-mobile></line-chart-mobile>
     </mat-tab>
     <mat-tab label="Comunidad">
+      <search-input-mobile></search-input-mobile>
       <community-mobile></community-mobile>
     </mat-tab>
     <mat-tab class="achieve" label="Metas">
-      <div class="achieve-title">Metas Logradas</div>
+      <search-input-mobile></search-input-mobile>
+      <div class="achieve-title mt-1">Metas Logradas</div>
       <div class="mt-1">Participa, invita y denuncia</div>
       <card-topics-mobile></card-topics-mobile>
     </mat-tab>
