update styles circle chart

--- a/src/app/hub/components/circle-chart-mobile/circle-chart-mobile.component.scss
+++ b/src/app/hub/components/circle-chart-mobile/circle-chart-mobile.component.scss
@@ -1,3 +1,25 @@
-:host ::ng-deep .mat-progress-spinner circle, .mat-spinner circle {   
-    stroke:  #20C588 
+.circleChart {
+    display: flex;
+    background: #FFFFFF;
+    padding: 20px;
+
+}
+
+.textProgressValue {
+    font-family: 'Noto Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 25px;
+    color: #306EFF;
+}
+
+.infoProgressValue {
+    font-family: 'Noto Sans';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 22px;
+}
+
+.circleChartInformation{
+    margin: 10px;
 }
