--- a/src/app/hub/components/circle-chart-mobile/circle-chart-mobile.component.html
+++ b/src/app/hub/components/circle-chart-mobile/circle-chart-mobile.component.html
@@ -1,4 +1,18 @@
-<div>Circle componenente</div>
-<mat-progress-spinner strokeWidth="10" mode="determinate" value="50">
-</mat-progress-spinner>
-
+<div class="circleChart mt-1">
+        <div style="position: relative;">
+                <mat-progress-spinner [color]="'accent'" [diameter]="150" [strokeWidth]="12"
+                        [value]="progressValue"></mat-progress-spinner>
+                <div class="textProgressValue"
+                        style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
+                        {{progressValue}}%
+                </div>
+        </div>
+        <div class="circleChartInformation">
+                <div class="infoProgressValue">{{progressValue}}%
+                </div>
+                <div class="mt-1">De libres profesionistas en tu red</div>
+                <div class="mt-1">
+                        <button type="button" mat-raised-button color="accent">Editar ocupación</button>
+                </div>
+        </div>
+</div>
